--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -3,6 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}MyMiniFactory!{% endblock %}</title>
+
+        <link
+          rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+          integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+          crossorigin="anonymous" />
+
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
